[package]
name = "crypton_node"
version = "0.1.0"
edition = "2021"
authors = [
    "ddjerqq"
]

[dependencies]
rand = "0.8.5"
elliptic-curve = "0.13.8"
secp256k1 = { version =  "0.28.0", features = ["rand"]  }
sha2 = { version = "0.10.8", features = ["std"] }
chbs = "0.1.1"
once_cell = "1.18.0"
uuid = "1.6.1"