[package]
name = "crypton_node"
version = "0.1.0"
edition = "2021"
authors = [
    "ddjerqq"
]

[dependencies]
rand = "0.8.5"
elliptic-curve = "0.13.8"
secp256k1 = { version =  "0.28.0", features = ["rand"]  }
sha2 = { version = "0.10.8", features = ["std"] }
chbs = "0.1.1"
once_cell = "1.18.0"
uuid = { version = "1.6.1", features = ["v4"] }
hex = "0.4.3"
serde_derive = "1.0.193"
serde = { version = "1.0.193", features = ["derive", "std"] }
rmp-serde = "1.1.2"